@@ -105,9 +105,9 @@ public final class LocalDate
     }
 
     /** The local millis from 1970-01-01T00:00:00 */
-    private long iLocalMillis;
+    private final long iLocalMillis;
     /** The chronology to use in UTC. */
-    private Chronology iChronology;
+    private final Chronology iChronology;
     /** The cached hash code. */
     private transient volatile int iHash;
 
@@ -398,6 +398,17 @@ public final class LocalDate
         long instant = chronology.getDateTimeMillis(year, monthOfYear, dayOfMonth, 0);
         iChronology = chronology;
         iLocalMillis = instant;
+    }
+
+    /**
+     * Handle broken serialization from other tools.
+     * @return the resolved object, not null
+     */
+    private Object readResolve() {
+        if (DateTimeZone.UTC.equals(iChronology.getZone()) == false) {
+            return new LocalDate(iLocalMillis, iChronology.withUTC());
+        }
+        return this;
     }
 
     //-----------------------------------------------------------------------
