@@ -93,9 +93,9 @@ public final class LocalDateTime
     private static final int MILLIS_OF_DAY = 3;
 
     /** The local millis from 1970-01-01T00:00:00 */
-    private long iLocalMillis;
+    private final long iLocalMillis;
     /** The chronology to use in UTC */
-    private Chronology iChronology;
+    private final Chronology iChronology;
 
     //-----------------------------------------------------------------------
     /**
@@ -450,6 +450,17 @@ public final class LocalDateTime
             hourOfDay, minuteOfHour, secondOfMinute, millisOfSecond);
         iChronology = chronology;
         iLocalMillis = instant;
+    }
+
+    /**
+     * Handle broken serialization from other tools.
+     * @return the resolved object, not null
+     */
+    private Object readResolve() {
+        if (DateTimeZone.UTC.equals(iChronology.getZone()) == false) {
+            return new LocalDateTime(iLocalMillis, iChronology.withUTC());
+        }
+        return this;
     }
 
     //-----------------------------------------------------------------------
